[project]
name = "stands"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anndata==0.10.7",
    "dgl==2.1.0+cu117",
    "networkx==3.2.1",
    "numpy==1.22.4",
    "pandas==1.5.1",
    "pillow==9.4.0",
    "pulp==2.7.0",
    "pyemd==1.0.0",
    "rpy2==3.5.13",
    "scanpy==1.10.1",
    "scikit-learn==1.2.0",
    "scipy==1.11.4",
    "torch==2.0.0",
    "torchvision==0.15.1",
    "tqdm==4.64.1",
]
required-platforms = [
    "linux_x86_64",
    "manylinux_2_39_x86_64"
]
